--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -497,6 +497,7 @@ body:hover .visually-hidden button {
 .footnotes,
 .footnotelist {
   color: $middle-gray;
+  margin-bottom: 1em;
 
   ol, li, p {
     margin-bottom: 0;
