--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -95,8 +95,18 @@
     }
   }
 
+  .twitter-tweet {
+    margin-bottom: $indent-var !important;
+    margin-left: auto;
+    margin-right: auto;
+  } 
+
   a {
     text-decoration: none;
+
+    &:focus {
+      outline: none;
+    }
 
     &:hover {
       text-decoration: underline;
