style of code-corner-sign

--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -75,6 +75,7 @@ $body-color                 : #fff !default;
 $background-color           : #fff !default;
 $code-background-color      : #3f3f3f !default;
 $code-background-color-dark : $light-gray !default;
+$code-comment               : #5f9cac !default;
 $text-color                 : $dark-gray !default;
 $border-color               : $lighter-gray !default;
 
