seo html title for index and about

--- a/_includes/head/seo-tag.html
+++ b/_includes/head/seo-tag.html
@@ -4,7 +4,7 @@ Begin Jekyll SEO tag v2.2.0
 see https://github.com/jekyll/jekyll-seo-tag/ for usage instructions
 -->
 
-{% if page.url == "/" or page.url == "/about/" %}
+{% if page.url == "/index.html" or page.url == "/uber/" %}
   {% assign seo_homepage_or_about = true %}
 {% endif %}
 
@@ -18,7 +18,9 @@ see https://github.com/jekyll/jekyll-seo-tag/ for usage instructions
   {% assign seo_separator = " | " %}
 {% endif %}
 
-{% if page.title and seo_site_title %}
+{% if seo_homepage_or_about %}
+  {% assign seo_title = seo_site_title | append: seo_separator | append: site.description %}
+{% elsif page.title and seo_site_title %}
   {% assign seo_title = page.title | append: seo_separator | append: seo_site_title %}
 {% elsif site.description and seo_site_title %}
   {% assign seo_title = seo_site_title | append: seo_separator | append: site.description %}
