smaller body in print

--- a/_sass/minimal-mistakes/_print.scss
+++ b/_sass/minimal-mistakes/_print.scss
@@ -29,6 +29,8 @@
     line-height: 1.5;
     margin: 0 auto;
     text-rendering: optimizeLegibility;
+    max-width: 80%;
+    width: 80%;
   }
 
   h1,
