--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -96,11 +96,11 @@ blockquote {
   margin: 2em 1em 2em 0;
   padding-left: 1em;
   padding-right: 1em;
-  font-style: italic;
+  font-style: normal;
   border-left: 0.25em solid $light-gray;
 
   cite {
-    font-style: italic;
+    font-style: normal;
 
     ul, ol {
       margin-top: -1em;
