--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -28,7 +28,8 @@
 
   @include breakpoint($large) {
     float: right;
-    width: span(10 of 12);
+    width: span(8 of 12);
+    margin-right: span(2 of 12);
     padding-left: gutter(0.5 of 12);
     padding-right: gutter(2 of 12);
   }
@@ -357,6 +358,7 @@
   }
 }
 
+/*
    Related
    ========================================================================== */
 
