--- a/_layouts/autopage_tags.html
+++ b/_layouts/autopage_tags.html
@@ -9,7 +9,7 @@ layout: default
   {% include sidebar.html %}
 
   <div class="archive">
-    <h1 class="page__title archive__taxonomy">Getagged mit {{ page.title }}</h1>
+    <h1 class="page__title archive__taxonomy">{{ page.title }}</h1>
     <div class="archive__taxonomy">
     {% for post in paginator.posts %}
       {% include archive-single.html %}
