--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -33,8 +33,8 @@
   }
 
   @include breakpoint($x-large) {
-    width: calc(100% - #{$right-sidebar-width});
-    padding-right: $right-sidebar-width;
+    width: calc(100% - #{$right-sidebar-width} + 50px);
+    padding-right: $right-sidebar-width-narrow;
   }
 
   .page__inner-wrap {
@@ -46,8 +46,8 @@
 
     .page__content,
     .page__meta,
-    .page__excerpt { 
     .page__share,
+    .page__excerpt { 
       position: relative;
       float: left;
       margin-left: 0;
