--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -33,7 +33,7 @@
   }
 
   @include breakpoint($x-large) {
-    width: calc(100% - #{$right-sidebar-width} + 50px);
+    width: calc(100% - #{$right-sidebar-width});
     padding-right: $right-sidebar-width-narrow;
   }
 
