caption border radius: 0 in print, else only top-left

--- a/_sass/minimal-mistakes/_print.scss
+++ b/_sass/minimal-mistakes/_print.scss
@@ -224,6 +224,7 @@
     color: #000 !important;
     background: #fff !important;
     opacity: 1;
+    border-radius: 0;
 
     a {
       color: #000 !important;
