--- a/_sass/minimal-mistakes/_buttons.scss
+++ b/_sass/minimal-mistakes/_buttons.scss
@@ -11,12 +11,14 @@
   display: inline-block;
   margin-bottom: 0.25em;
   padding: 0.5em 1em;
+  color: #fff !important;
   font-family: $sans-serif;
   font-size: $type-size-7;
   font-weight: bold;
   text-align: center;
   text-decoration: none;
-  border-width: 0;
+  background-color: $primary-color;
+  border: 0 !important;
   border-radius: $border-radius;
   cursor: pointer;
 
