--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -166,7 +166,7 @@ a > code,
 li > code,
 figcaption > code,
 td > code {
-  color:#fdce93;
+  color:#ffdfb7;
   padding-top: 0.1rem;
   padding-bottom: 0.1rem;
   font-size: $type-size-65emb;
