added lunr search adjustments

--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -22,7 +22,7 @@ layout: default
 
     {{ content }}
 
-    <form>
+    <form class="page__search-form js-form form">
       <input placeholder="{{ site.data.ui-text[site.locale].search_placeholder_text | default: "Enter your search term..." }}" type="search" id="search" class="search-input">
     </form>
 
