--- a/_sass/minimal-mistakes/_search.scss
+++ b/_sass/minimal-mistakes/_search.scss
@@ -8,6 +8,20 @@
   }
 }
 
+.page__search-form {
+  padding: 1em;
+  margin-bottom: 1em;
+  background: $lighter-gray;
+  -webkit-transition: $global-transition;
+  transition: $global-transition;
+  border: 1px solid #bdc1c4;
+  border-radius: 4px;
+}
+
+.page__search-form input {
+  margin-bottom: 0;
+}
+
 .greedy-nav .search__toggle {
   margin-left: 1rem;
   margin-right: 1rem;
