--- a/_sass/minimal-mistakes/_search.scss
+++ b/_sass/minimal-mistakes/_search.scss
@@ -66,7 +66,15 @@
 
     .archive {
       float: none;
-      padding-right: 200px;
+      padding-right: 0;
+
+      @include breakpoint($large) {
+        padding-right: 200px;
+      }
+
+      @include breakpoint($x-large) {
+        padding-right: 200px;
+      }
     }
   }
 
