--- a/_includes/tag-list.html
+++ b/_includes/tag-list.html
@@ -14,7 +14,7 @@
   {% assign tag_hashes = page_tags | split: ',' | sort %}
 
   <p class="page__taxonomy">
-    <strong><i class="fa fa-fw fa-tags" aria-hidden="true"></i> <a href="/tags/" title="Tag Index">{{ site.data.ui-text[site.locale].tags_label | default: "Tags:" }}</a> </strong>
+    <strong><i class="fas fa-fw fa-tags" aria-hidden="true"></i> <a href="/tags/" title="Tag Index">{{ site.data.ui-text[site.locale].tags_label | default: "Tags:" }}</a> </strong>
     <span itemprop="keywords">
     {% for hash in tag_hashes %}
       {% assign keyValue = hash | split: '#' %}
