--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<a id="scroll-top-button" class="btn btn--inverse" href="#top"><i class="fa fa-rocket" aria-hidden="true"></i></a>
+<a id="scroll-top-button" class="btn btn--inverse" href="#top"><i class="fa fa-fw fa-rocket" aria-hidden="true"></i></a>
 
 <div class="page__footer-follow">
   <ul class="social-icons">
