--- a/_sass/_onfont.scss
+++ b/_sass/_onfont.scss
@@ -4,3 +4,26 @@
 
 @import "onvariables";
 @import "onfontpath";
+
+.icomoon {
+  display: inline-block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-rocket:before {
+  content: "\e900";
+}
