--- a/_sass/_onfontpath.scss
+++ b/_sass/_onfontpath.scss
@@ -208,3 +208,14 @@
     font-style: normal;
 
 }
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('#{$on-font-path}/icomoon.eot?gu9hth');
+  src:  url('#{$on-font-path}/icomoon.eot?gu9hth#iefix') format('embedded-opentype'),
+    url('#{$on-font-path}/icomoon.ttf?gu9hth') format('truetype'),
+    url('#{$on-font-path}/icomoon.woff?gu9hth') format('woff'),
+    url('#{$on-font-path}/icomoon.svg?gu9hth#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
