--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -397,6 +397,10 @@ body:hover .visually-hidden button {
     transition: background-color .3s, opacity .5s, visibility .5s;
 }
 
+#scroll-top-button:focus {
+    outline: none;
+}
+
 #scroll-top-button .icomoon {
   font-weight: normal;
   font-style: normal;
@@ -418,7 +422,7 @@ body:hover .visually-hidden button {
 }
 
 #scroll-top-button.btn.take-off {
-  border: none !important;
+  border-color: white !important;
 }
 
 #scroll-top-button.take-off .icon-rocket {
