changes due to fontawesome 5

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -50,9 +50,9 @@
   </article>
   <footer class="page__meta">
   {% if post.last_modified_at %}
-    <p class="page__date"><strong><i class="far fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time datetime="{{ post.last_modified_at | date_to_xmlschema }}">aaa{{ post.last_modified_at | localizeit: "%d. %B %Y" }}</time></p>
+    <p class="page__date"><strong><i class="far fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time datetime="{{ post.last_modified_at | date_to_xmlschema }}">{{ post.last_modified_at | localize: "%d. %B %Y" }}</time></p>
   {% elsif post.date %}
-    <p class="page__date"><strong><i class="far fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time datetime="{{ post.date | date_to_xmlschema }}">aaa{{ post.date | localizeit: "%d. %B %Y" }}</time></p>
+    <p class="page__date"><strong><i class="far fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | localize: "%d. %B %Y" }}</time></p>
   {% endif %}
   </footer>
 </div>
