--- a/_sass/_onfontpath.scss
+++ b/_sass/_onfontpath.scss
@@ -211,11 +211,11 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:  url('#{$on-font-path}/icomoon.eot?gu9hth');
-  src:  url('#{$on-font-path}/icomoon.eot?gu9hth#iefix') format('embedded-opentype'),
-    url('#{$on-font-path}/icomoon.ttf?gu9hth') format('truetype'),
-    url('#{$on-font-path}/icomoon.woff?gu9hth') format('woff'),
-    url('#{$on-font-path}/icomoon.svg?gu9hth#icomoon') format('svg');
+  src:  url('#{$on-font-path}/icomoon.eot?5x7efz');
+  src:  url('#{$on-font-path}/icomoon.eot?5x7efz#iefix') format('embedded-opentype'),
+    url('#{$on-font-path}/icomoon.ttf?5x7efz') format('truetype'),
+    url('#{$on-font-path}/icomoon.woff?5x7efz') format('woff'),
+    url('#{$on-font-path}/icomoon.svg?5x7efz#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
