--- a/_sass/_onfont.scss
+++ b/_sass/_onfont.scss
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-code:before {
+  content: "\e901";
+}
 .icon-rocket:before {
   content: "\e900";
 }
