--- a/_sass/minimal-mistakes/_buttons.scss
+++ b/_sass/minimal-mistakes/_buttons.scss
@@ -46,6 +46,7 @@
   (facebook, $facebook-color),
   (twitter, $twitter-color),
   (google-plus, $google-plus-color),
+  (google-plus-g, $google-plus-color),
   (linkedin, $linkedin-color);
 
   @each $buttoncolor, $color in $buttoncolors {
@@ -58,7 +59,7 @@
 
         @include touch-hover() {
           color: #fff !important;
-          border-color: $gray !important;
+          border-color: $dark-gray !important;
           background-color: $social-color !important;
         }
       }
