--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -300,16 +300,13 @@
     text-decoration: none;
   }
 
-  i:nth-child(n + 2) {
+  i:nth-child(n + 2),
+  svg:nth-child(n + 2) {
     margin-left: 1em;
   }
 
   .page__date {
     margin-top: 0.4em;
-  }
-
-  time {
-    margin-right: 1em;
   }
 }
 
@@ -349,6 +346,13 @@
 
   strong {
     margin-right: 10px;
+
+    &:hover {
+      svg,
+      a {
+        color: $gray;
+      }
+    }
   }
 }
 
@@ -364,6 +368,7 @@
   &:hover {
     text-decoration: none;
     color: $link-color-hover;
+    border-color: $gray;
   }
 }
 
