--- a/_sass/minimal-mistakes/_syntax.scss
+++ b/_sass/minimal-mistakes/_syntax.scss
@@ -19,8 +19,8 @@ figure.highlight {
     right: 0;
     padding: 0.5em;
     background-color: $code-comment;
-    content: "\f121";
-    font-family: "fontawesome" !important;
+    content: "\e901";
+    font-family: "icomoon" !important;
     line-height: 1;
     text-transform: none;
     speak: none;
