allow links in excerpts

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -46,7 +46,7 @@
       {% endif %}
       </p>
     {% endif %}
-    {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncatewords: truncw }}</p>{% endif %}
+    {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}</p>{% endif %}
   </article>
   <footer class="page__meta">
   {% if post.last_modified_at %}
