added video embed plugin for youtube and vimeo

--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -578,6 +578,11 @@ a.reversefootnote,
   }
 }
 
+// remove margin when embedded inside of a <figure> element
+figure .responsive-video-container {
+  margin-bottom: 0;
+}
+
 // full screen video fixes
 :-webkit-full-screen-ancestor {
   .masthead,
