defined a text-decoration and hover bc of -webkit-any-link

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -147,6 +147,12 @@ cite {
 /* links */
 
 a {
+  text-decoration: none;
+  
+  &:hover {
+    text-decoration: underline;
+  }
+ 
   &:focus {
     @extend %tab-focus;
     outline: none;
