changed data protection url in cookie consent

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -20,7 +20,7 @@ window.cookieconsent.initialise({
     "dismiss": "OK",
     "deny": "Cookies ablehnen!",
     "link": "Mehr erfahren...",
-    "href": "https://ondata.work/impressum-datenschutz/"
+    "href": "/impressum-datenschutz/"
   }
 })});
 </script>
