cookieconsent scripts in header and footer

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -27,4 +27,8 @@
 	<script src='https://www.google.com/recaptcha/api.js'></script>
 {% endif %}
 
+<!-- cookie notice https://cookieconsent.insites.com/ -->
+<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+
 <!-- end custom head snippets -->
