cookieconsent other theme

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -2,17 +2,17 @@
 <!-- cookie notice https://cookieconsent.insites.com/ -->
 <script>
 window.addEventListener("load", function(){
-console.log(window.cookieconsent)
 window.cookieconsent.initialise({
   "palette": {
     "popup": {
       "background": "#3a3e42"
     },
     "button": {
-      "background": "#3e8296"
+      "background": "transparent",
+      "text": "#3e8296",
+      "border": "#3e8296"
     }
   },
-  "theme": "classic",
   "content": {
     "message": "Webseite verwendet Cookies. Unerwünscht? Dann dem Link folgen und Lernen, das Tracking zu deaktivieren!.",
     "dismiss": "OK",
