--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -14,7 +14,7 @@ window.cookieconsent.initialise({
     }
   },
   "content": {
-    "message": "Webseite verwendet Cookies. Unerwünscht? Dann dem Link folgen und Lernen, das Tracking zu deaktivieren!.",
+    "message": "Webseite verwendet Cookies. Unerwünscht? Dann dem Link folgen und Lernen, das Tracking zu deaktivieren!",
     "dismiss": "OK",
     "deny": "Cookies ablehnen!",
     "link": "Mehr erfahren...",
