changed cookie consent notice

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -30,7 +30,6 @@
 <!-- cookie notice https://cookieconsent.insites.com/ -->
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
-<!-- cookie notice https://cookieconsent.insites.com/ -->
 <script>
 window.addEventListener("load", function(){
 window.cookieconsent.initialise({
@@ -40,12 +39,12 @@ window.cookieconsent.initialise({
     },
     button: {
       background: "transparent",
-      text: "#3e8296",
-      border: "#3e8296"
+      text: "#52adc8",
+      border: "#52adc8"
     }
   },
   content: {
-    message: "Webseite verwendet Cookies. Unerwünscht? Dann dem Link folgen und Lernen, das Tracking zu deaktivieren!",
+    message: "Webseite verwendet Cookies. Unerwünscht? Dann dem Link folgen und lernen, das Tracking zu deaktivieren!",
     dismiss: "OK",
     deny: "Cookies ablehnen!",
     link: "Mehr erfahren...",
