--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -158,6 +158,7 @@ a {
     outline: none;
   }
 
+
   &.image-popup:focus {
     outline: none;
   }
@@ -169,6 +170,21 @@ a {
 
   &:visited {
     color: $link-color-visited;
+  }
+}
+
+p > a {
+  &:not(.btn):not(#goog-wm-sb):hover {
+    text-decoration: none;
+    background-image: linear-gradient(rgba(82,173,200,0.5), rgba(82,173,200,0.5));
+    background-size: 1em 0.1em;
+    background-position: 0em 0.95em;
+    padding-bottom: 0em;
+    background-repeat: repeat-x;
+    text-decoration: none;
+    font-style: normal;
+    -webkit-transition: none;
+    transition: none;
   }
 }
 
