--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -4,11 +4,7 @@
   <ul>
     {% comment %} Link for previous page {% endcomment %}
     {% if paginator.previous_page %}
-      {% if paginator.previous_page == 1 %}
-        <li><a href="{{ first_page_path }}">{{ site.data.ui-text[site.locale].pagination_previous | default: "Previous" }}</a></li>
-      {% else %}
-        <li><a href="{{ site.paginate_path | replace: ':num', paginator.previous_page | replace: '//', '/' | relative_url }}">{{ site.data.ui-text[site.locale].pagination_previous | default: "Previous" }}</a></li>
-      {% endif %}
+      <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: 'index.html', '' }}">{{ site.data.ui-text[site.locale].pagination_previous | default: "Previous" }}</a></li>
     {% else %}
     <li><a href="#" class="disabled"><span aria-hidden="true">{{ site.data.ui-text[site.locale].pagination_previous | default: "Previous" }}</span></a></li>
     {% endif %}
@@ -34,19 +30,11 @@
           {% endif %}
         {% endif %}
 
-    {% for index in (page_start..page_end) %}
-      {% if index == paginator.page %}
-        <li><a href="{{ site.paginate_path | replace: ':num', index | replace: '//', '/' | relative_url }}" class="disabled current">{{ index }}</a></li>
-      {% else %}
-        {% comment %} Distance from current page and this link {% endcomment %}
-        {% assign dist = paginator.page | minus: index %}
-        {% if dist < 0 %}
-          {% comment %} Distance must be a positive value {% endcomment %}
-          {% assign dist = 0 | minus: dist %}
+        {% assign page_end = paginator.total_pages | minus: 1 %}
+        {% assign pages_to_end = paginator.total_pages | minus: paginator.page %}
+        {% if pages_to_end > 4 %}
+          {% assign page_end = paginator.page | plus: 2 %}
         {% endif %}
-        <li><a href="{{ site.paginate_path | replace: ':num', index | relative_url }}">{{ index }}</a></li>
-      {% endif %}
-    {% endfor %}
 
         {% if trail.num >= page_start and trail.num <= page_end %}
           {% if trail.num == paginator.page %}
@@ -58,15 +46,27 @@
           {% endif %}
         {% endif %}
 
-    {% if paginator.page == paginator.total_pages %}
-      <li><a href="#" class="disabled current">{{ paginator.page }}</a></li>
-    {% else %}
-      <li><a href="{{ site.paginate_path | replace: ':num', paginator.total_pages | replace: '//', '/' | relative_url }}">{{ paginator.total_pages }}</a></li>
+        {% if trail.num == paginator.total_pages - 1 %}
+          {% comment %} Ellipsis for truncated links {% endcomment %}
+          {% if pages_to_end > 3 %}
+            <li><a href="#" class="disabled">&hellip;</a></li>
+          {% endif %}
+        {% endif %}
+
+        {% if trail.num == paginator.total_pages %}
+          {% if paginator.page == paginator.total_pages %}
+            <li><a href="#" class="disabled current">{{ paginator.page }}</a></li>
+          {% else %}
+            <li><a href="{{ trail.path | prepend: site.baseurl | replace: 'index.html', '' }}">{{ paginator.total_pages }}</a></li>
+          {% endif %}
+        {% endif %}
+
+      {% endfor %}
     {% endif %}
 
     {% comment %} Link next page {% endcomment %}
     {% if paginator.next_page %}
-      <li><a href="{{ site.paginate_path | replace: ':num', paginator.next_page | replace: '//', '/' | relative_url }}">{{ site.data.ui-text[site.locale].pagination_next | default: "Next" }}</a></li>
+      <li><a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: 'index.html', '' }}">{{ site.data.ui-text[site.locale].pagination_next | default: "Next" }}</a></li></a></li>
     {% else %}
       <li><a href="#" class="disabled"><span aria-hidden="true">{{ site.data.ui-text[site.locale].pagination_next | default: "Next" }}</span></a></li>
     {% endif %}
