changes for dsgvo

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -43,12 +43,13 @@ window.cookieconsent.initialise({
       border: "#52adc8"
     }
   },
+  type: "opt-out",
   content: {
     message: "Webseite verwendet Cookies. Unerwünscht? Dann dem Link folgen und lernen, das Tracking zu deaktivieren!",
     dismiss: "OK",
-    deny: "Cookies ablehnen!",
+    deny: "Nein zu Cookies!",
     link: "Mehr erfahren...",
-    href: "/impressum-datenschutz/"
+    href: "/datenschutz/"
   },
   elements: {
     messagelink: '<span id="cookieconsent:desc" class="cc-message">Webseite verwendet Cookies. Unerwünscht? Dann dem Link folgen und lernen, das Tracking zu deaktivieren! <a aria-label="learn more about cookies" tabindex="0" class="cc-link" href="/impressum-datenschutz/" target="_self">Mehr erfahren...</a></span>'
