--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,4 +21,4 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. <a href="{{ site.masthead.url }}">{{ site.masthead.name }}</a>. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>. <a class="logo-netlify" href="https://www.netlify.com" target="_blank"><img src="/assets/images/netlify-light.svg"/></a></div>
+<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. <a href="{{ site.masthead.url }}">{{ site.masthead.name }}</a>. <a href="{{ site.dataprotect.url }}">{{ site.dataprotect.name }}</a>. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>. <a class="logo-netlify" href="https://www.netlify.com" target="_blank"><img src="/assets/images/netlify-light.svg"/></a></div>
