--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,9 @@
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% if page.robots %}
+<meta name="robots" content="{{page.robots}}" />
+{% endif %}
 
 <script>
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
