--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -52,7 +52,7 @@ window.cookieconsent.initialise({
     href: "/datenschutz/"
   },
   elements: {
-    messagelink: '<span id="cookieconsent:desc" class="cc-message">Webseite verwendet Cookies. Unerwünscht? Dann dem Link folgen und lernen, das Tracking zu deaktivieren! <a aria-label="learn more about cookies" tabindex="0" class="cc-link" href="/impressum-datenschutz/" target="_self">Mehr erfahren...</a></span>'
+    messagelink: '<span id="cookieconsent:desc" class="cc-message">Webseite verwendet Cookies. Unerwünscht? Dann dem Link folgen und lernen, das Tracking zu deaktivieren! <a aria-label="learn more about cookies" tabindex="0" class="cc-link" href="/datenschutz/" target="_self">Mehr erfahren...</a></span>'
   }
 })});
 </script>
